--- a/OracleJETApplication-V-2/css/oj-override.css
+++ b/OracleJETApplication-V-2/css/oj-override.css
@@ -22,7 +22,7 @@ body {
 a {
   cursor: pointer; }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2 {
   font-family: 'Helvetica Neue Light';
   font-weight: normal;
   color: #fff;
@@ -56,6 +56,13 @@ h1.pageTitle {
     text-decoration: none !important; }
   #topDrawer #offCanvasScope {
     height: 225px; }
+    #topDrawer #offCanvasScope .analyticsWrapper {
+      background-color: #fff;
+      display: block;
+      float: left;
+      margin: 0 10px;
+      padding: 10px;
+      color: #000; }
     #topDrawer #offCanvasScope .oj-tabs-tab.oj-selected, #topDrawer #offCanvasScope .oj-tabs-tab.oj-active .oj-tabs-close-icon, #topDrawer #offCanvasScope .oj-tabs-tab.oj-active .oj-tabs-anchor {
       border: 0;
       background-color: #454545; }
@@ -200,6 +207,15 @@ html:not([dir="rtl"]) .oj-dialog-title {
 #ojDialogWrapper-peopleDialogWindow .dialogSendBtn.oj-button.oj-button-full-chrome.oj-default, #ojDialogWrapper-peopleDialogWindow .dialogSendBtn.oj-button.oj-button-full-chrome.oj-hover, #ojDialogWrapper-peopleDialogWindow .dialogSendBtn.oj-button.oj-button-full-chrome.oj-focus-only {
   background-color: #507AA0; }
 
+#ojDialogWrapper-empBasicDialogWindow .oj-dialog-header {
+  background-color: #507AA0; }
+  #ojDialogWrapper-empBasicDialogWindow .oj-dialog-header .oj-dialog-header-close-wrapper {
+    background-color: #446888; }
+    #ojDialogWrapper-empBasicDialogWindow .oj-dialog-header .oj-dialog-header-close-wrapper.oj-hover .oj-dialog-close-icon {
+      color: #446888; }
+#ojDialogWrapper-empBasicDialogWindow .dialogSendBtn.oj-button.oj-button-full-chrome.oj-default, #ojDialogWrapper-empBasicDialogWindow .dialogSendBtn.oj-button.oj-button-full-chrome.oj-hover, #ojDialogWrapper-empBasicDialogWindow .dialogSendBtn.oj-button.oj-button-full-chrome.oj-focus-only {
+  background-color: #507AA0; }
+
 #ojDialogWrapper-profileDialogWindow .oj-dialog-header {
   background-color: #507AA0; }
   #ojDialogWrapper-profileDialogWindow .oj-dialog-header .oj-dialog-header-close-wrapper {
@@ -277,6 +293,33 @@ html:not([dir="rtl"]) .oj-dialog-title {
   .customUserIcon:before {
     content: url("images/default-user-icon.png"); }
 
+#headerTemplate .profileTitleWrap {
+  display: none; }
+
+.homeTitleWrap {
+  background-color: #346fd4; }
+
+.labor-managementTitleWrap {
+  background-color: #EA5801; }
+
+.inventory-managementTitleWrap {
+  background-color: #3E9850; }
+
+.gift-loyaltyTitleWrap {
+  background-color: #4C1889; }
+
+.reports-analyticsTitleWrap {
+  background-color: #596D86; }
+
+.enterpriseTitleWrap {
+  background-color: #2D3142; }
+
+.peopleTitleWrap {
+  background-color: #507AA0; }
+
+.profileTitleWrap {
+  background-color: #507AA0; }
+
 #appHeaderDesktopNav .topNavImgIcon, #appHeaderMobileNav .topNavImgIcon {
   margin-top: 3px;
   display: inline-block;
@@ -340,8 +383,7 @@ html:not([dir="rtl"]) .oj-dialog-title {
   width: 200px;
   outline-color: transparent; }
   #appDrawer .oj-navigationlist-element .oj-default .oj-navigationlist-item-label {
-    color: #fff;
-    font-weight: 300; }
+    color: #fff; }
 
 /*Page Tabs*/
 .oj-navigationlist-page-level.oj-navigationlist-vertical:not(.oj-navigationlist-icon-only) .oj-navigationlist-item:not(.oj-disabled) a.oj-navigationlist-item-content .oj-navigationlist-item-label {
@@ -355,6 +397,14 @@ html:not([dir="rtl"]) .oj-dialog-title {
       background-color: #fff; }
       .subTabs .oj-navigationlist-item.oj-selected a.oj-navigationlist-item-content {
         color: #000; }
+
+.searchTitle h2 {
+  color: #000; }
+
+.searchWindow .peopleSearchWrapper {
+  padding: 0 20px; }
+.searchWindow .button-row {
+  padding: 10px 10px 0 10px; }
 
 @media only screen and (min-width: 768px) {
   .homeTitleWrap {
@@ -603,7 +653,18 @@ html:not([dir="rtl"]) .oj-dialog-title {
 
   .dialog-dimensions {
     width: 85%;
-    height: auto; } }
+    height: auto; }
+
+  #appDrawer {
+    background-color: #f5f5f5;
+    width: 200px;
+    outline-color: transparent; }
+    #appDrawer .oj-navigationlist-element .oj-default .oj-navigationlist-item-label {
+      color: #045fab; }
+    #appDrawer .oj-navigationlist-element .oj-hover {
+      background-color: #454545; }
+      #appDrawer .oj-navigationlist-element .oj-hover .oj-navigationlist-item-label {
+        color: #fff; } }
 @media only screen and (min-width: 320px) and (max-width: 767px) {
   #homeNavList {
     background-color: #346fd4;
@@ -724,7 +785,6 @@ html:not([dir="rtl"]) .oj-dialog-title {
   margin: 5px 0;
   height: 40px;
   width: 100%;
-  min-width: 100px !important;
   font-family: Helvetica Neue, helvetica, arial, sans-serif;
   font-size: 16px;
   font-weight: 500;
@@ -814,7 +874,7 @@ html:not([dir="rtl"]) .oj-dialog-title {
     width: 50%;
     display: block; }
   #loginPage a.btn_primary {
-    max-width: 150px; }
+    max-width: 300px; }
   #loginPage .textlg {
     font-size: 20px;
     color: #fff;
@@ -860,8 +920,8 @@ html:not([dir="rtl"]) .oj-dialog-title {
   #loginPage .topbackground {
     border-bottom: 0;
     background-color: transparent;
-    height: auto;
-    margin-top: 90px; }
+    height: 136px;
+    margin-top: 163px; }
   #loginPage .circle_1 {
     position: relative;
     z-index: 2;
