--- a/OracleJETApplication-V-2/views/header.html
+++ b/OracleJETApplication-V-2/views/header.html
@@ -156,7 +156,7 @@
 <!--    Doesnt seem to work-->
 <!--
     <div data-bind="if: $root.router.stateId() == 'profile'">
-        <div class="oj-flex" data-bind="css: $root.router.stateId() + 'TitleWrap', if:$root.router.stateId() == 'profile'">
+        <div id="profileDiv" class="oj-flex" data-bind="css: $root.router.stateId() + 'TitleWrap', if:$root.router.stateId() == 'profile'">
             <div id="topDrawer" class="oj-offcanvas-top" data-bind="ojModule: {
                             name: 'profile',
                             viewName: 'partials/profile-header/profile-header-large'}">
