--- a/OracleJETApplication-V-2/views/labor-management/schedules-timecards/schedules-timecards-large.html
+++ b/OracleJETApplication-V-2/views/labor-management/schedules-timecards/schedules-timecards-large.html
@@ -1,3 +1,76 @@
-<div>
-    hello Large
-</div>
+
+
+<!-- large template -->
+<script type="text/html" id="md_lg_xl_template_b">
+    <div class="oj-flex oj-flex-items-pad">
+        <div class="oj-flex-item">
+<!--            -large
+            <a data-bind="click: function(){$root.handleOpen('#homeDialogWindow')}" style="line-height:39px;">edit <i class="fa fa-pencil-square-o"></i></a>-->
+            
+
+                            <div class="oj-flex" style="background-color: #ffffff; padding : 20px; height: 500px; margin: 20px">
+                                <div class="oj-lg-4 oj-md-4 oj-flex-item" style="padding: 10px; ">
+                                    <div style="background-color: #000000; height: 480px; background-color: #000000; padding: 10px; ">
+                                        <label style="color: #ffffff">Dashboard content here</label>
+                                        <br /><a href="#" data-bind="click: $parent.empLaborScheduleOpen" >+add new schedule</a>
+                                    
+                                    </div>
+                                </div>
+
+                                <div class="oj-lg-8 oj-md-8 oj-flex-item" style="padding: 10px; ">
+                                    <div style="background-color: #000000; height: 130px; margin: 10px; ">
+                                        <label style="color: #ffffff">Dashboard content here</label>
+                                    </div>
+                                    <div style="background-color: #000000; height: 130px; margin: 10px; ">
+                                        <label style="color: #ffffff">Dashboard content here</label>
+                                    </div>
+                                    <div style="background-color: #000000; height: 210px; margin: 10px; ">
+                                        <label style="color: #ffffff">Dashboard content here</label>
+                                    </div>
+                                </div>
+                               
+        </div>
+    </div>
+    <!--home dialog modal-->
+    <div data-bind="template: {name: 'labor-management/dialogwindow/schedule-dailogwindow-large'}"></div>
+</script>
+
+<script type="text/html" id="md_lg_xl_template_w">
+    <div class="oj-flex oj-flex-items-pad">
+        <div class="oj-flex-item">
+        
+
+                            <div class="oj-flex" style="background-color: #ffffff; padding : 20px; height: 500px; ">
+                                <div class="oj-lg-6 oj-md-6 oj-flex-item" style="padding: 10px; ">
+                                    <div style="background-color: #000000; height: 480px; background-color: #000000; margin: 10px; ">
+                                        <label style="color: #ffffff">This week's schedule</label>
+                                        <br /><a href="#" 
+                                                 data-bind="click: $parent.empLaborScheduleOpen" >+add new schedule</a>
+                                    </div>
+                                    
+                                </div>
+
+                                <div class="oj-lg-4 oj-md-4 oj-flex-item" style="padding: 10px; ">
+                                    
+                                   
+                                    <div style="background-color: #000000; height: 480px; margin: 10px; ">
+                                        <label style="color: #ffffff">Dashboard content here</label>
+                                    </div>
+                                </div>
+                                
+                                <div class="oj-lg-2 oj-md-2 oj-flex-item" style="padding: 10px; ">
+                                    
+                                   
+                                    <div style="background-color: #000000; height: 480px; margin: 10px; ">
+                                        <label style="color: #ffffff">Dashboard content here</label>
+                                    </div>
+                                </div>
+                               
+        </div>
+    </div>
+    <!--home dialog modal-->
+    <div data-bind="template: {name: 'labor-management/dialogwindow/schedule-dailogwindow-large'}"></div>
+</script>
+<div id="templateWrapper" data-bind="template: 
+    $root.activeLocation() === 'Washington D.C.' ? 'md_lg_xl_template_w' : 'md_lg_xl_template_b'
+             "></div>
