--- a/OracleJETApplication-V-2/views/partials/employee-search/employee-search-small.html
+++ b/OracleJETApplication-V-2/views/partials/employee-search/employee-search-small.html
@@ -12,79 +12,128 @@
                     </div>
                     <hr class="oj-flex-item" />
                 </div>
-                <div class="oj-flex">
-                    <div class="oj-flex-item peopleSearchWrapper">
-                         <label for="payrollid">Payroll ID</label>
-                         <input id="payrollid" data-bind="ojComponent: {component: 'ojInputText', value:'', help: {definition: helpDef()}}">
+                <div class="oj-flex" >
+                <div class="oj-flex-item" style="background-color: #ffffff; padding: 2px; ">
+                    <div class="oj-flex-item" style="background-color: #ffffff;  width: 296px; border: 3px solid #000000">
 
-                        <label for="firstname">First Name</label>
-                        <input placeholder="search" id="firstname" data-bind="value: firstNameSearch, ojComponent: {component: 'ojInputText', help: {definition: helpDef()}}"/>
+                        <div class="oj-flex-item" style="background-color: #e1e7ee; padding: 2px; ">
+                            <label >Search</label>
+                        </div>
+                        <div id="simplesearch" style="background-color: #ffffff; padding: 2px;" data-bind="visible:visibleAdvanceSearch()===false">
+                            <input class="oj-flex-item" style="background-color: #ffffff;  border: 1px solid #000000"
+                                   placeholder="Search for active names, stores, jobs" 
+                                   id="firstname" data-bind="value: firstNameSearch, ojComponent: {component: 'ojInputText',rootAttributes: {
+                                            style:'max-width:45em'}}"/>
+                            <input class="oj-flex-item oj-button-primary" id="submit" type="submit" 
+                                   data-bind="ojComponent: {component: 'ojButton', 
+                            label: 'Search', icons: { start: 'fa fa-search'} }" />
+                            <input class="oj-flex-item" id="reset" type="reset" data-bind="click: resetData, ojComponent: {component: 'ojButton', label: 'Clear'}" />
+                            <button class="oj-flex-item" id="hidesimple" style="float:right;" 
+                                   data-bind="click: hideSimpleSearch, ojComponent: {component: 'ojButton', label: 'Adv. Search'}" />
 
-                        <label for="lastname">Last Name</label>
-                        <input id="lastname" data-bind="ojComponent: {component: 'ojInputText', value:'', help: {definition: helpDef()}}">
+                        </div>
 
+                        <div id="advanceseach" style="background-color: #ffffff; padding: 2px;" data-bind="visible:visibleAdvanceSearch">
+<!--                            <div class="oj-flex-item" style="background-color: #fffff; padding: 10px; ">
+                                <span style="font-style:bold">Advance Search</span>
+                            </div>-->
 
-                        <label for="basicSelect">Single Select </label>
-                        <select id="basicSelect" data-bind="ojComponent: {component: 'ojSelect', value: val, rootAttributes: {style:'max-width:20em'}}">
-                            <option value="IE">Internet Explorer</option>
-                            <option value="FF">Firefox</option>
-                            <option value="CH">Chrome</option>
-                            <option value="OP">Opera</option>
-                            <option value="SA">Safari</option>
-                        </select>
-                    </div>
-                </div>
-                
-                <div class="oj-flex accordionRow">
+                            <div class="oj-flex" style="background-color: #ffffff; height: auto">
+                                <div class="oj-lg-2 oj-md-2 oj-flex-item" style="padding: 10px; ">
+                                    <label for="firstname">FIRST NAME</label>
+                                    <input id="firstname" data-bind="value: advFirstNameSearch, ojComponent: {component: 'ojInputText'}"/>
+
+                                    <label for="lastname">LAST NAME</label>
+                                    <input id="lastname" data-bind="value: lastNameSearch,ojComponent: {component: 'ojInputText'}">
+
+                                </div>
+
+                                <div class="oj-lg-2 oj-md-3 oj-flex-item" style="padding: 10px; ">
+                                    <label for="homestore">HOME STORE ASSIGNMENT</label>
+                                    <input placeholder="" id="homestore" data-bind="value: homeStoreSearch, ojComponent: {component: 'ojInputText'}"/>
+
+                                    <label for="lastname">AWAY STORE(S)</label>
+                                    <input id="awaystore" data-bind="value: awayStoreSearch,ojComponent: {component: 'ojInputText'}">
+
+                                </div>
+
+                                <div class="oj-lg-3 oj-md-2 oj-flex-item" style="padding: 10px; ">
+                                    <label for="job">JOB</label>
+                                    <input placeholder="" id="job" data-bind="value: jobSearch, ojComponent: {component: 'ojInputText'}"/>
+
+                                    <label for="payroll">PAYROLL ID</label>
+                                    <input id="payroll" data-bind="value: payrollIdSearch,ojComponent: {component: 'ojInputText'}">
+
+                                </div>
+                                <div class="oj-flex accordionRow">
                 <div class="oj-flex-item">
                     <div id="employee-search-accordion" data-bind="ojComponent: {component: 'ojAccordion'}">
                         <div id="c1">
-                            <span>Status</span>
-                            <div>
-                                <div id="checkboxSetId" aria-labelledby="mainlabelid" data-bind="ojComponent: {
+                                    <label for="status">STATUS</label>
+                                    <div>
+                                        <div id="statuscheckboxSetId" aria-labelledby="mainlabelid" data-bind="ojComponent: {
                                                               component: 'ojCheckboxset',
+                                                              invalidComponentTracker: statusTracker,
                                                               value: currentStatus}">
-                                    <span class="oj-choice-row">
-                                        <input id="active" type="checkbox" value="Active">
-                                        <label for="active">Active</label>
-                                    </span>
-                                    <span class="oj-choice-row">
-                                        <input id="inactivesuspended" type="checkbox" value="Inactive-Suspended">
-                                        <label for="inactivesuspended">Inactive-Suspended</label>
-                                    </span>
-                                    <span class="oj-choice-row">
-                                        <input id="inactiveterm" type="checkbox" value="Inactive-Terminated">
-                                        <label for="inactiveterm">Inactive-Terminated</label>
-                                    </span>
+                                            <span class="oj-choice-row">
+                                                <input id="active" type="checkbox" value="Active" checked>
+                                                <label for="active">Active</label>
+                                            </span>
+                                            <span class="oj-choice-row">
+                                                <input id="inactivesuspended" type="checkbox" value="Inactive-Suspended"  checked>
+                                                <label for="inactivesuspended">Inactive-Suspended</label>
+                                            </span>
+                                            <span class="oj-choice-row">
+                                                <input id="inactiveterm" type="checkbox" value="Inactive-Terminated"  checked>
+                                                <label for="inactiveterm">Inactive-Terminated</label>
+                                            </span>
+                                            <span class="oj-choice-row">
+                                                <input id="inactiveterm" type="checkbox" value="Inactive-Leave"  checked>
+                                                <label for="inactiveterm">Inactive-Leave Of Absence</label>
+                                            </span>
+                                        </div>
+                                    </div>
                                 </div>
-                            </div>
-                        </div>
-                        <div id="c2">
-                            <span>More Options</span>
-                            <div>
-                                <div id="checkboxSetId" aria-labelledby="mainlabelid" data-bind="ojComponent: {
+                                    
+                                <div id="c2">
+                                
+                                    <label for="status">MORE OPTIONS</label>
+                                    <div>
+                                        <div id="morecheckboxSetId" aria-labelledby="mainlabelid" data-bind="ojComponent: {
                                                               component: 'ojCheckboxset',
-                                                              value: currentStatus}">
-                                    <span class="oj-choice-row">
-                                        <input id="minor" type="checkbox" value="Minor">
-                                        <label for="minor">Minor</label>
-                                    </span>
-                                    <span class="oj-choice-row">
-                                        <input id="termLOA" type="checkbox" value="Included Terminated & LOA Employees">
-                                        <label for="termLOA">Included Terminated &amp; LOA Employees</label>
-                                    </span>
-                                </div>
+                                                              value: currentMoreOptions}">
+                                            <span class="oj-choice-row">
+                                                <input id="minor" type="checkbox" value="Minor" checked data-bin="help: {definition: helpDef()}">
+                                                <label for="minor">Minor</label>
+                                            </span>
+
+                                        </div>
+                                    </div>
+                                    </div>   
+                                </div>   
                             </div>
+                                
+                            <div id="advancebtn" style="background-color: #ffffff; padding: 2px; margin: 2px">
+                                <button class="oj-flex-item" id="hideadvance" 
+                                        data-bind="click: hideAdvanceSearch, 
+                                        ojComponent: {component: 'ojButton', label: 'Default search'}"> 
+                                </button>
+
+                                <input class="oj-flex-item oj-button-primary" id="advsubmit" type="submit"
+                                       style="float:right; margin-left: 5px"
+                                       data-bind="click:advanceSearch,ojComponent: {component: 'ojButton', 
+                                        label: 'Search', icons: { start: 'fa fa-search'} }" />
+                                
+                                <button class="oj-flex-item" id="advreset" style="float:right; margin-left: 5px" 
+                                        data-bind="click: advResetData, 
+                                    ojComponent: {component: 'ojButton', label: 'Clear'}" />
+
+                            </div> 
                         </div>
+
                     </div>
-                
                 </div>
-            </div>
-            <div class="button-row">
-                  <!--temporary toggleSection function applied to these buttons, will need to submit form and return results and then clear results-->
-                 <input id="submit" type="submit" data-bind="ojComponent: {component: 'ojButton', label: 'Search', icons: { start: 'fa fa-search'} }" />
-                 <input id="reset" type="reset" data-bind="click: resetData, ojComponent: {component: 'ojButton', label: 'Clear'}" />
-            </div>
+        </div>
             </form>
         </div>
         <div class="oj-flex searchWindow">
@@ -92,7 +141,9 @@
                 <div class="oj-flex-items-pad">
                     <div class="oj-flex-item"><h2>Search Results</h2></div>
 
-                        <div style="margin-top:0px; position: relative;" data-bind="ojComponent: {component: 'ojPagingControl', data: listViewDataSource, pageSize:10}"></div>
+                        <div style="margin-top:0px; position: relative; width: 310px;" 
+                             data-bind="ojComponent: {component: 'ojPagingControl', 
+                                data: listViewDataSource, pageSize:10}"></div>
                         <ul id="listview" data-bind="ojComponent: {component: 'ojListView',
                             data: listViewDataSource,
                             item: {template: 'peoplelist_template'},
@@ -113,15 +164,14 @@
                                             </div>
                                             <div class="oj-sm-8 oj-col">
                                                 <div class="oj-sm-12 oj-flex-item">
-                                                    <span data-bind="text: payrollId"></span>
+                                                    <strong><span class="header" data-bind="text: firstName + ' ' + lastName"></span></strong>
                                                 </div>
                                                 <div class="oj-sm-12 oj-flex-item">
-                                                    <strong><span class="header" data-bind="text: firstName + ' ' + lastName"></span></strong>, 
                                                     <span data-bind="text: homeStore"></span>
 
                                                 </div>
                                                 <div class="oj-sm-12 oj-flex-item">
-                                                    <span data-bind="text: hireDate"></span>
+                                                    <span data-bind="text: $parent.getBasicFormattedDate(hireDate)"></span>
                                                 </div>
                                                 <div class="oj-sm-12 oj-flex-item">
                                                     <div class="employeeStatusListView" data-bind="style:{color: status == 'Inactive-Terminated' ? '#e80023' : '#81bb5f'}"><strong>Hire Status</strong> <span data-bind="text: status"></span></div>
